Agrego párrafo y estilo interno con etiqueta <style>

--- a/index.html
+++ b/index.html
@@ -5,16 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Principal</title>
+  <style>
+    p {
+      font-size: 1.2em;
+      line-height: 1.5;
+      color: #a75113;
+      margin: 20px;
+    }
+  </style>
 
 </head>
 
 <body>
 
-  <head>
+  <header>
 
-  </head>
+  </header>
   <main>
-
+    <p>
+      Los perros no solo son los mejores amigos del ser humano, también tienen habilidades sorprendentes. Por ejemplo,
+      pueden aprender más de 100 palabras, reconocer emociones humanas y adaptarse a distintos entornos con facilidad.
+      Algunas razas, como el Border Collie, destacan por su inteligencia y capacidad de aprendizaje, lo que los
+      convierte en excelentes compañeros para tareas de búsqueda, rescate o terapia.
+    </p>
   </main>
   <footer>
 
