Se agregó el div estilo-perros y se aplicaron cambios de estilo en CSS.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Principal</title>
   <style>
-    p {
+    .info-perros {
       color: #a75113;
     }
   </style>
@@ -20,12 +20,24 @@
 
   </header>
   <main>
-    <p>
+    <p class="info-perros">
       Los perros no solo son los mejores amigos del ser humano, también tienen habilidades sorprendentes. Por ejemplo,
       pueden aprender más de 100 palabras, reconocer emociones humanas y adaptarse a distintos entornos con facilidad.
       Algunas razas, como el Border Collie, destacan por su inteligencia y capacidad de aprendizaje, lo que los
       convierte en excelentes compañeros para tareas de búsqueda, rescate o terapia.
     </p>
+
+    <div class="estilo-perros">
+      <p>A este div se le añadió borde inset (8px), bordes redondeados (1em), márgenes (2rem) y padding (1rem).
+      </p>
+      <p class="info-perros">
+        Los perros no solo son los mejores amigos del ser humano, también tienen habilidades sorprendentes. Por ejemplo,
+        pueden aprender más de 100 palabras, reconocer emociones humanas y adaptarse a distintos entornos con facilidad.
+        Algunas razas, como el Border Collie, destacan por su inteligencia y capacidad de aprendizaje, lo que los
+        convierte en excelentes compañeros para tareas de búsqueda, rescate o terapia.
+      </p>
+    </div>
+
   </main>
   <footer>
 
