Se agregó la etiqueta <nav> dentro de <header> y la etiqueta <section> dentro de <main> en el HTML. Se comentaron estilos anteriores y se añadieron nuevos estilos para header, section y footer en CSS.

--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
 <body>
 
   <header>
-
+    <nav>
+    </nav>
   </header>
   <main>
-    <p class="info-perros">
-      Los perros no solo son los mejores amigos del ser humano, también tienen habilidades sorprendentes. Por ejemplo,
-      pueden aprender más de 100 palabras, reconocer emociones humanas y adaptarse a distintos entornos con facilidad.
-      Algunas razas, como el Border Collie, destacan por su inteligencia y capacidad de aprendizaje, lo que los
-      convierte en excelentes compañeros para tareas de búsqueda, rescate o terapia.
-    </p>
 
     <div class="estilo-perros">
       <p>A este div se le añadió borde inset (8px), bordes redondeados (1em), márgenes (2rem) y padding (1rem).
@@ -37,6 +32,7 @@
         convierte en excelentes compañeros para tareas de búsqueda, rescate o terapia.
       </p>
     </div>
+    <section></section>
 
   </main>
   <footer>
