--- a/index.html
+++ b/index.html
@@ -4,24 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Principal</title>
+  <title>Curiosidades Perrunas</title>
   <style>
     .info-perros {
       color: #a75113;
     }
   </style>
   <link rel="stylesheet" href="css/miestilo.css">
-
+  <link rel="shortcut icon" href="img/icons/favicon-patas.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
 
   <header>
     <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="perros.html">Perros</a></li>
+        <li><a href="gatos.html">Gatos</a></li>
+        <li><a href="peces.html">Peces</a></li>
+      </ul>
     </nav>
   </header>
-  <main>
 
+  <main>
+    <br>
     <div class="estilo-perros">
       <p>A este div se le añadió borde inset (8px), bordes redondeados (1em), márgenes (2rem) y padding (1rem).
       </p>
@@ -32,12 +41,31 @@
         convierte en excelentes compañeros para tareas de búsqueda, rescate o terapia.
       </p>
     </div>
-    <section></section>
+
+    <section>
+      <img src="img/golden.png" alt="Golden Retriever">
+      <img src="img/rottweiler.png" alt="Rottweiler">
+      <img src="img/labrador.png" alt="Labrador">
+    </section>
 
   </main>
+
   <footer>
+    <div class="footer-content">
+      <a href="https://www.facebook.com/" target="_blank" class="btn btn-primary m-2">
+        <i class="bi bi-facebook"></i> Facebook
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" class="btn btn-danger m-2">
+        <i class="bi bi-instagram"></i> Instagram
+      </a>
+      <a href="https://twitter.com/" target="_blank" class="btn btn-info m-2">
+        <i class="bi bi-twitter"></i> Twitter
+      </a>
+      <p><br>Derechos reservados &copy; 2025</p>
+    </div>
 
   </footer>
+
 </body>
 
 </html>
